--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -2835,9 +2835,20 @@
   [(set_attr "type" "imovx")
    (set_attr "mode" "SI")])
 
+(define_insn "*extzvqi_mem_rex64"
+  [(set (match_operand:QI 0 "norex_memory_operand" "=Bn")
+	(subreg:QI
+	  (zero_extract:SI (match_operand 1 "ext_register_operand" "Q")
+			   (const_int 8)
+			   (const_int 8)) 0))]
+  "TARGET_64BIT && reload_completed"
+  "mov{b}\t{%h1, %0|%0, %h1}"
+  [(set_attr "type" "imov")
+   (set_attr "mode" "QI")])
+
 (define_insn "*extzvqi"
   [(set (match_operand:QI 0 "nonimmediate_operand" "=QBc,?R,m")
-        (subreg:QI
+	(subreg:QI
 	  (zero_extract:SI (match_operand 1 "ext_register_operand" "Q,Q,Q")
 			   (const_int 8)
 			   (const_int 8)) 0))]
@@ -2862,6 +2873,21 @@
      (if_then_else (eq_attr "type" "imovx")
 	(const_string "SI")
 	(const_string "QI")))])
+
+(define_peephole2
+  [(set (match_operand:QI 0 "register_operand")
+	(subreg:QI
+	  (zero_extract:SI (match_operand 1 "ext_register_operand")
+			   (const_int 8)
+			   (const_int 8)) 0))
+   (set (match_operand:QI 2 "norex_memory_operand") (match_dup 0))]
+  "TARGET_64BIT
+   && peep2_reg_dead_p (2, operands[0])"
+  [(set (match_dup 2)
+	(subreg:QI
+	  (zero_extract:SI (match_dup 1)
+			   (const_int 8)
+			   (const_int 8)) 0))])
 
 (define_expand "insv<mode>"
   [(set (zero_extract:SWI248 (match_operand:SWI248 0 "register_operand")
