--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,9 @@
+2016-12-30  Jakub Jelinek  <jakub@redhat.com>
+
+	PR translation/78745
+	* exgettext: Handle multi-line help texts in *.opt files.
+	* gcc.pot: Regenerate.
+
 2016-12-30  Joseph Myers  <joseph@codesourcery.com>
 
 	* es.po, fr.po: Update.
