--- a/libgomp/ChangeLog
+++ b/libgomp/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-01  Jakub Jelinek  <jakub@redhat.com>
+
+	* libgomp.texi: Bump @copying's copyright year.
+
 2016-12-02  Sebastian Huber  <sebastian.huber@embedded-brains.de>
 
 	* libgomp/config/rtems/pool.h (gomp_thread_pool_reservoir): Use
@@ -8330,7 +8334,7 @@
 
 	Initial implementation and checkin.
 
-Copyright (C) 2005-2016 Free Software Foundation, Inc.
+Copyright (C) 2005-2017 Free Software Foundation, Inc.
 
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
