--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2017-01-01  Jan Hubicka  <hubicka@ucw.cz>
 
+	PR middle-end/77674
+	* symtab.c (symtab_node::binds_to_current_def_p): Fix handling of
+	transparent aliases.
+
+2017-01-01  Jan Hubicka  <hubicka@ucw.cz>
+
 	PR middle-end/77484
 	* predict.def (PRED_CALL): Update hitrate.
 	(PRED_INDIR_CALL, PRED_POLYMORPHIC_CALL): New predictors.
