--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* genmatch.c (dt_node::gen_kids_1): If generic_exprs include SSA_NAME
+	and exprs_len || fns_len, emit the code for SSA_NAME next to the exprs
+	and fns handling, rather than in a separate case SSA_NAME.
+
 2017-01-02  Jeff Law  <law@redhat.com>
 
 	* config/darwin-driver.c (darwin_driver_init): Const-correctness
