--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2017-01-03  Jakub Jelinek  <jakub@redhat.com>
 
+	PR middle-end/78901
+	* gimple-ssa-sprintf.c (try_substitute_return_value): Don't change
+	possibly throwing calls.
+
 	* genmatch.c (dt_node::gen_kids_1): If generic_exprs include SSA_NAME
 	and exprs_len || fns_len, emit the code for SSA_NAME next to the exprs
 	and fns handling, rather than in a separate case SSA_NAME.
